Added default_on_empty variable.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -242,10 +242,12 @@ if $record_player_stats [exec scripts/stats/stats.csl]
 if $autoteambalance [exec scripts/teambalance.csl]
 
 defaultgame = [
-    //TODO refactoring: extract cleanup code
-    mastermode $MM_OPEN
-    changemap $default_mode $default_map
-    gametime $default_gametime
+    mastermode $MM_OPEN //must be reset in case it was set to locked or private from a server script
+    
+    if $default_on_empty [
+        changemap $default_mode $default_map
+        gametime $default_gametime
+    ]
 ]
 
 defaultgame
