--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -15,11 +15,10 @@ teamkill_limit = 10   // per game
 teamkill_maxrate = 5  // per minute
 teamkill_bantime = 30 // minutes
 
-// Used by defaultgame command which is called at server startup and when
-// server becomes empty.
 default_mode = instagib
 default_map = complex
 default_gametime = (mins 10)
+default_on_empty = 0    //change to default game when server becomes empty
 
 mapvoting_enabled = 1
 auto_update = 1
