New behaviour: added onsetmaster event dispatch from fpsserver::console_setmaster and authserv::authsuceeded

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -189,7 +189,7 @@ event_handler $onsetmaster [
         log (format "%1(%2) relinquished privileged status." (player_name $cn) $cn)
         currentmaster = -1
     ] [
-        log (format "%1(%2) claimed %3" (player_name $cn) $cn (player_priv $cn))
+        log (format "%1(%2) gained %3" (player_name $cn) $cn (player_priv $cn))
         currentmaster = $cn
     ]
 ]
