Added banlist file.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -9,6 +9,7 @@ exec "scripts/irc.csl"
 exec "scripts/teamkills.csl"
 exec "scripts/commands.csl"
 exec "conf/vars.conf"
+exec "conf/banlist.conf"
 
 logfile "logs/server.log" server_log
 log = [
