Added update_banlist function.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -9,7 +9,6 @@ exec "scripts/irc.csl"
 exec "scripts/teamkills.csl"
 exec "scripts/commands.csl"
 exec "conf/vars.conf"
-exec "conf/banlist.conf"
 
 logfile "logs/server.log" server_log
 log = [
@@ -285,3 +284,9 @@ printsvstatus = [
     local output (format "%1/%2, %3 %4, %5 mins left" $playercount $maxclients $mapname $gamemode $timeleft)
     system [echo "@output" >> @filename]
 ]
+
+update_banlist = [
+    exec "conf/banlist.conf"
+]
+
+update_banlist
