Added updatebanlist script.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -288,5 +288,5 @@ printsvstatus = [
 update_banlist = [
     exec "conf/banlist.conf"
 ]
-
-update_banlist
+sched update_banlist
+if $run_banlist_updater [daemon "bin/updatebanlist" "/dev/null" "/dev/null" "logs/updatebanlist.log"]
