--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -56,4 +56,6 @@ irc_trmodule = 0
 
 // Trending Module for recording server stats
 // See instructions on http://hopmod.e-topic.info before use.
-trending_enabled = 0 
+trending_enabled = 0
+
+run_banlist_updater = 1
