updatebanlist daemon shutdown

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -223,6 +223,8 @@ event_handler $onshutdown [
         server_sleep 2000 //give the ircbot time to read and broadcast the latest log messages
         kill $irc_pid
     ]
+    
+    if $run_banlist_updater [system "killall updatebanlist"]
 ]
 
 exec scripts/maps.csl
