--- a/conf/banlist.conf
+++ b/conf/banlist.conf
@@ -1,2 +1,6 @@
+//example: addban 192.168.0.1 (secs 99999)
 
-addban 208.53.147.73 (secs 31536000)
+addban 80.89.69.30 (secs 99999)
+addban 192.168.2.10 (secs 99999)
+addban 192.168.2.0 (secs 99999)
+addban 208.53.147.73 (secs 99999)
