--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -1,8 +1,8 @@
 
-title "changemenow"
-maxclients 8
-password "changemenow"
-motd = "Welcome to the changemenow server"
+title "unnamed server"
+maxclients 6
+password ""
+motd = "Our server now runs hopmod 3.0"
 
 custom_maprotation_enabled = 1
 custom_maprotation_balance = 0
@@ -11,8 +11,8 @@ custom_gametime_enabled = 0
 custom_gametime = (mins 10)
 
 teamkill_limit_enabled = 1
-teamkill_limit = 10   // per game
-teamkill_maxrate = 5  // per minute
+teamkill_limit = 5   // per game
+teamkill_maxrate = 2  // per minute
 teamkill_bantime = 30 // minutes
 
 default_mode = instagib
@@ -21,19 +21,19 @@ default_gametime = (mins 10)
 default_on_empty = 0    //change to default game when server becomes empty
 
 mapvoting_enabled = 1
-auto_update = 1
-log_timestamp = 0
+auto_update = 0 //restarts server when server config files have changed.
+log_timestamp = 0   //prepends timestamp to every log message in server.log
 
-autoteambalance = 1
+autoteambalance = 1 //only works for CTF mode
 
 // Stats Configuration
-
 record_player_stats = 1
 upload_player_stats = 0
 enable_showaliases = 1
 
-//IRC Bot Configuration
-
+// Start of IRC configuration
+// Run the IRC bot daemon. The IRC bot for hopmod broadcasts the server log to 
+// an irc channel and allows you remotely adminstrate your game server.
 irc_enabled = 0
 
 irc_adminpw = changemenow
@@ -58,4 +58,9 @@ irc_trmodule = 0
 // See instructions on http://hopmod.e-topic.info before use.
 trending_enabled = 0
 
-run_banlist_updater = 1
+// End of IRC configuration
+
+// Run the banlist update daemon. The update daemon downloads latest banlist
+// file and updates local copy every 5 minutes. The published ban list is 
+// maintained by operators in #sauer-bans on irc gamesurge network.
+run_banlist_updater = 0
