--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -1,5 +1,5 @@
 
-title "unnamed server"
+title "unnamed-server"
 maxclients 6
 password ""
 motd = "Our server now runs hopmod 3.0"
@@ -63,4 +63,4 @@ trending_enabled = 0
 // Run the banlist update daemon. The update daemon downloads latest banlist
 // file and updates local copy every 5 minutes. The published ban list is 
 // maintained by operators in #sauer-bans on irc gamesurge network.
-run_banlist_updater = 1
+run_banlist_updater = 0
