Removed #kickmaster command.

--- a/src/enet/Makefile
+++ b/src/enet/Makefile
@@ -92,13 +92,13 @@ DIST_ARCHIVES = $(distdir).tar.gz
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run aclocal-1.9
+ACLOCAL = aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run tar
-AUTOCONF = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run automake-1.9
+AMTAR = tar
+AUTOCONF = autoconf
+AUTOHEADER = autoheader
+AUTOMAKE = automake-1.9
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -122,7 +122,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run makeinfo
+MAKEINFO = makeinfo
 OBJEXT = o
 PACKAGE = libenet.a
 PACKAGE_BUGREPORT = 
@@ -155,7 +155,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = /home/sauerbraten/cvshead/sauerbraten/src/enet/install-sh
+install_sh = /home/sauerbraten/hopmod/trunk/src/enet/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
