--- a/src/enet/include/Makefile
+++ b/src/enet/include/Makefile
@@ -53,13 +53,13 @@ ETAGS = etags
 CTAGS = ctags
 DIST_SUBDIRS = $(SUBDIRS)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run aclocal-1.9
+ACLOCAL = aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run tar
-AUTOCONF = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run automake-1.9
+AMTAR = tar
+AUTOCONF = autoconf
+AUTOHEADER = autoheader
+AUTOMAKE = automake-1.9
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -83,7 +83,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/sauerbraten/cvshead/sauerbraten/src/enet/missing --run makeinfo
+MAKEINFO = makeinfo
 OBJEXT = o
 PACKAGE = libenet.a
 PACKAGE_BUGREPORT = 
@@ -116,7 +116,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = /home/sauerbraten/cvshead/sauerbraten/src/enet/install-sh
+install_sh = /home/sauerbraten/hopmod/trunk/src/enet/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
