Moved country function implementation into server code. Removed geoip plugin.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -269,7 +269,8 @@ log [Server started @(datetime (now))]
 open_scriptpipe
 
 load paths "./lib"
-load module geoip
+//load module geoip
+load_geoip_data "share/GeoIP.dat"
 
 printsvinfo = [
     parameters filename
@@ -293,3 +294,5 @@ update_banlist = [
 ]
 sched update_banlist
 if $run_banlist_updater [daemon "bin/updatebanlist" "/dev/null" "/dev/null" "logs/updatebanlist.log"]
+
+
