Added -f command option (startup conf file)

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -263,14 +263,13 @@ currentmaster = -1
 allow_talk = 1
 disallow_talk_reason = ""
 
-log_status "*** Running Hopmod 3.0 (dev) for Sauerbraten CTF Edition ***"
+log_status "*** Running Hopmod 3.0 for Sauerbraten CTF Edition ***"
 log [Server started @(datetime (now))]
 
 open_scriptpipe
 
 load paths "./lib"
-//load module geoip
-load_geoip_data "share/GeoIP.dat"
+try load_geoip_data "share/GeoIP.dat" [log_error "Expect 'country' function to fail because the GeoIP database was not loaded."]
 
 printsvinfo = [
     parameters filename
