Moved server script code to scripts/servermod.cs

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -1,8 +1,8 @@
 
-title "unnamed-server"
+title "unnamed"
 maxclients 6
 password ""
-motd = "Our server now runs hopmod 3.0"
+motd = "Our server is now runnning hopmod 3.0"
 
 custom_maprotation_enabled = 1
 custom_maprotation_balance = 0
