--- a/conf/server.conf
+++ b/conf/server.conf
@@ -4,3 +4,5 @@ exec "scripts/servermod.cs"
 //# The server mod has been loaded at this point.
 
 //# Put your own extension code here.
+
+log_status "CHECK!!"
