--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -2,7 +2,7 @@
 title "unnamed"
 maxclients 6
 password ""
-motd = "Our server is now runnning hopmod 3.0"
+motd = "Our server is now running hopmod 3.0"
 
 custom_maprotation_enabled = 1
 custom_maprotation_balance = 0
