Added script_socket_server_port variable.

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -64,3 +64,5 @@ trending_enabled = 0
 // file and updates local copy every 5 minutes. The published ban list is 
 // maintained by operators in #sauer-bans on irc gamesurge network.
 run_banlist_updater = 0
+
+script_socket_server_port = 7894
