Added stats filters. Added delete_match_stats function.

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -29,6 +29,8 @@ autoteambalance = 1 //only works for CTF mode
 // Stats Configuration
 record_player_stats = 1
 enable_showaliases = 1
+stats_filter_policy_min_frags = 1
+stats_filter_policy_min_duration = 60
 
 // Start of IRC configuration
 // Run the IRC bot daemon. The IRC bot for hopmod broadcasts the server log to 
