Added experimental player locator functionality. Enabled private bot coms.

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -52,12 +52,10 @@ irc_serverlogfile = logs/server.log
 
 // Optional Modules - May require additional module installation.
 
-// Translation Module for sending translated text. Requires REST::Google::Translate
-irc_trmodule = 0
-
-// Trending Module for recording server stats
-// See instructions on http://hopmod.e-topic.info before use.
-trending_enabled = 0
+// Player Locator : Locates common clan tags and lists players on other servers.
+// Requires additional Modules.
+// See instructions on http://hopmod.e-topic.info/index.php5?title=IRC_Bot before use.
+irc_player_locator = 0
 
 // End of IRC configuration
 
