Added note explaining how to have multiple command names.

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -41,7 +41,9 @@ irc_adminpw = changemenow
 irc_debug = 0
 irc_network = irc.us.gamesurge.net
 irc_channel = #qs-server
-irc_botcommandname = changeme
+// It is possible to have multiple command names if you separate them with a pipe. This would allow
+// you to have all of you bots answer to one name for common commands like who. 
+irc_botcommandname = changeme|changemeall
 irc_botname = {changeme}
 irc_port = 6667
 irc_serverpipe = serverexec
