--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -41,6 +41,8 @@ irc_adminpw = changemenow
 irc_debug = 0
 irc_network = irc.us.gamesurge.net
 irc_channel = #qs-server
+// This is the channel where non standard messages go
+irc_monitor_channel = #quicksilver
 // It is possible to have multiple command names if you separate them with a pipe. This would allow
 // you to have all of you bots answer to one name for common commands like who. 
 irc_botcommandname = changeme|changemeall
