Added script_socket_server_enabled var.

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -68,6 +68,7 @@ irc_player_locator = 0
 // maintained by operators in #sauer-bans on irc gamesurge network.
 run_banlist_updater = 0
 
+script_socket_server_enabled = 1
 script_socket_server_port = 7894
 
 // Server map rotation lists
