Added check_unnameds function. Will spec all unnameds on the server with warningsystem. The function is for the default disabled

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -15,6 +15,8 @@ teamkill_limit = 7   // per game
 teamkill_maxrate = 3  // per minute
 teamkill_bantime = 30 // minutes
 
+check_unnameds = 0 // will spec all unnameds
+
 check_pings = 0 // will check the pings every 20 secs
 check_pings_rate = 25 // in secs
 maxping = 300
