Moved stats_db_filename var to conf/vars.conf

--- a/conf/vars.conf
+++ b/conf/vars.conf
@@ -37,6 +37,7 @@ record_player_stats = 1
 enable_showaliases = 1
 stats_filter_policy_min_frags = 1
 stats_filter_policy_min_duration = 60
+stats_db_filename = "scripts/stats/data/stats.db"
 
 // Start of IRC configuration
 // Run the IRC bot daemon. The IRC bot for hopmod broadcasts the server log to 
