Added vardefaults.cs file to declare and assign all public variables. Removed obscure variables from vars.conf.

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -1,4 +1,5 @@
 exec "scripts/baselib.csl"
+exec "scripts/vardefaults.cs"
 exec "conf/vars.conf"
 exec "scripts/servermod.cs"
 //# The server mod has been loaded at this point.
