--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,7 @@ include_directories(
     ${OPENSSL_INCLUDE_DIR}
     ${GEOIP_INCLUDE_DIRS})
 
-add_definitions(-Wall -fsigned-char -DSTANDALONE -DREVISION=$ENV{REVISION} -DLUA_COMPAT_MODULE ${LSQLITE3_DEFINITIONS})
+add_definitions(-Wall -fsigned-char -DSTANDALONE -DREVISION="$ENV{REVISION}" -DLUA_COMPAT_MODULE ${LSQLITE3_DEFINITIONS})
 
 IF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG") 
     add_definitions( -O3)
